fix: embed copy button + widget offset settings

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://chat.ifiaas.com/w/66c363f8-c417-4eb9-9fce-01417c5f094a.js" async></script>
   </body>
 </html>
