fix: uploads, realtime, responsive widget v4

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="https://chat.ifiaas.com/w/09aad813-6943-4202-845b-a029d0670b66.js" async></script>
+    <script src="https://chat.ifiaas.com/w/09aad813-6943-4202-845b-a029d0670b66.js?v=5" async></script>
   </body>
 </html>
